# redisgraph-py

./: .gitignore  Dockerfile  LICENSE  README.md  my_test.py  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test.py  tox.ini
.circleci/: config.yml
.github/: release-drafter-config.yml
.github/workflows/: check-pypi.yml
redisgraph/: __init__.py  client.py  edge.py  exceptions.py  execution_plan.py  graph.py  node.py  path.py  query_result.py  util.py
tests/: README.md
tests/functional/: test.py  test_all.py
tests/unit/: test_edge.py  test_graph.py  test_node.py  test_path.py  test_query_result.py  test_util.py
tests/utils/: base.py
