[tool.poetry]
name = "redisgraph"
version = "2.4.0"
description = "RedisGraph Python Client"
authors = ["RedisLabs <oss@redislabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["Redis", "Graph"]
classifiers=[
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable'
]

[tool.poetry.urls]
url = "https://redisgraph.io"
repository = "https://github.com/RedisGraph/redisgraph-py"

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.5.3"
prettytable = "^2.1.0"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pytest-html = "^3.1.1"
testtools = "^2.4.0"
mock = "^4.0.3"
codecov = "^2.1.11"
flake8 = "^3.9.2"
tox-poetry = "^0.3.0"
vulture = "^2.3"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
